# 0xsff-cli

./: .gitignore  README.md  cli.py  pyproject.toml
0xsff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: app.py
collectors/: base.py  certspotter.py  cloud.py  crtsh.py  dns.py  email.py  github.py  http.py  wayback.py
core/: config.py  dispatcher.py  inventory.py  logger.py  pipeline.py  plugin_loader.py
engine/: diff.py  scoring.py  summary.py  surface_classifier.py
engines/: analysis.py  correlation.py  diff.py  reasoning.py
models/: asset.py  enums.py  evidence.py  finding.py
modules/: dns.py  headers.py  ports.py  tech.py
plugins/: breach_history.py  github.py  internetdb.py  leaks.py  subdomain_takeover.py  wayback.py
storage/: state.py
tests/: test_inventory.py
v1_backup/engine/: correlation.py  formatter.py  reasoning.py
v1_backup/modules/: http.py  subdomains.py
v1_backup/storage/: db.py
